fix: resolve blank Name, School, and Program fields in student portal by fixing duplicate IDs and API response

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1564,14 +1564,14 @@
                           <div class="card-body">
                             <div class="row">
                               <div class="col-md-6">
-                                <p><strong>Enrollment #:</strong> <span id="student-enrollment"></span></p>
-                                <p><strong>Name:</strong> <span id="student-name"></span></p>
-                                <p><strong>School:</strong> <span id="student-school"></span></p>
+                                <p><strong>Enrollment #:</strong> <span id="admin-student-enrollment"></span></p>
+                                <p><strong>Name:</strong> <span id="admin-student-name"></span></p>
+                                <p><strong>School:</strong> <span id="admin-student-school"></span></p>
                               </div>
                               <div class="col-md-6">
-                                <p><strong>Program:</strong> <span id="student-program"></span></p>
-                                <p><strong>Semester:</strong> <span id="student-semester"></span></p>
-                                <p><strong>Year Admitted:</strong> <span id="student-year-admitted"></span></p>
+                                <p><strong>Program:</strong> <span id="admin-student-program"></span></p>
+                                <p><strong>Semester:</strong> <span id="admin-student-semester"></span></p>
+                                <p><strong>Year Admitted:</strong> <span id="admin-student-year-admitted"></span></p>
                               </div>
                             </div>
                           </div>
