--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SCFC ERP - AUB</title>
+    <title>SCFC LMS - AUB</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -93,7 +93,7 @@
         >
           <div class="position-sticky sidebar-sticky">
             <div class="text-center p-3">
-              <h3 class="text-white">SCFC ERP</h3>
+              <h3 class="text-white">SCFC LMS</h3>
             </div>
             <ul class="nav flex-column">
               <li class="nav-item">
@@ -412,13 +412,13 @@
                   <div class="card shadow mb-4">
                     <div class="card-header py-3">
                       <h6 class="m-0 font-weight-bold text-primary">
-                        Welcome to SCFC ERP System
+                        Welcome to SCFC LMS System
                       </h6>
                     </div>
                     <div class="card-body">
                       <p>
                         This is the admin dashboard for the Student Centric
-                        Flexible Curriculum (SCFC) ERP system. From here, you
+                        Flexible Curriculum (SCFC) LMS system. From here, you
                         can manage all aspects of the curriculum.
                       </p>
                       <p>Use the sidebar to navigate to different sections:</p>
@@ -1776,7 +1776,7 @@
                         <div class="card-body">
                           <p>
                             Welcome to the Student Centric Flexible Curriculum
-                            (SCFC) portal. Here you can manage your academic
+                            (SCFC) LMS portal. Here you can manage your academic
                             journey with flexible course selection and
                             registration.
                           </p>
@@ -2361,7 +2361,7 @@
             />
           </div>
           <div class="modal-header">
-            <h5 class="modal-title">SCFC ERP - Amity University, Bengaluru</h5>
+            <h5 class="modal-title">SCFC LMS - Amity University, Bengaluru</h5>
           </div>
           <div class="modal-body">
             <div
