--- a/src/public/new-index.html
+++ b/src/public/new-index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SCFC ERP - Admin Dashboard</title>
+  <title>SCFC LMS - Admin Dashboard</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
@@ -17,7 +17,7 @@
       <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-dark sidebar collapse">
         <div class="position-sticky">
           <div class="text-center p-3">
-            <h3 class="text-white">SCFC ERP</h3>
+            <h3 class="text-white">SCFC LMS</h3>
           </div>
           <ul class="nav flex-column">
             <li class="nav-item">
@@ -151,10 +151,10 @@
               <div class="col-lg-12">
                 <div class="card shadow mb-4">
                   <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Welcome to SCFC ERP System</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Welcome to SCFC LMS System</h6>
                   </div>
                   <div class="card-body">
-                    <p>This is the admin dashboard for the Student Centric Flexible Curriculum (SCFC) ERP system. From here, you can manage all aspects of the curriculum.</p>
+                    <p>This is the admin dashboard for the Student Centric Flexible Curriculum (SCFC) LMS system. From here, you can manage all aspects of the curriculum.</p>
                     <p>Use the sidebar to navigate to different sections:</p>
                     <ul>
                       <li><strong>Schools</strong> - Manage academic schools/faculties</li>
@@ -284,7 +284,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Login to SCFC ERP</h5>
+          <h5 class="modal-title">Login to SCFC LMS</h5>
         </div>
         <div class="modal-body">
           <div id="login-alert" class="alert alert-danger d-none" role="alert"></div>
