--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1726,6 +1726,17 @@
                       Courses View
                     </a>
                   </li>
+                  <!-- Attendance View -->
+                  <li class="nav-item">
+                    <a
+                      class="nav-link text-white"
+                      href="#"
+                      id="student-attendance-link"
+                    >
+                      <i class="fas fa-chart-line me-2"></i>
+                      Attendance
+                    </a>
+                  </li>
                   <!-- Change Password option -->
                   <li class="nav-item">
                     <a
@@ -2106,6 +2117,38 @@
                                     <!-- Will be populated dynamically -->
                                   </tbody>
                                 </table>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Student Attendance Page -->
+                <div
+                  id="student-attendance-page"
+                  class="student-content-page"
+                  style="display: none"
+                >
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div style="margin-left: 50px; margin-right: 20px">
+                        <div class="card shadow mb-4">
+                          <div class="card-header py-3 bg-primary">
+                            <h6 class="m-0 font-weight-bold text-white">
+                              My Attendance
+                            </h6>
+                          </div>
+                          <div class="card-body">
+                            <div id="student-attendance-content">
+                              <!-- Will be populated dynamically -->
+                              <div class="text-center">
+                                <div class="spinner-border text-primary" role="status">
+                                  <span class="visually-hidden">Loading...</span>
+                                </div>
+                                <p class="mt-2">Loading attendance data...</p>
                               </div>
                             </div>
                           </div>
