--- a/src/public/index.html
+++ b/src/public/index.html
@@ -267,6 +267,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" id="attendance-link">
+                  <i class="fas fa-calendar-check me-2"></i>
+                  Attendance
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" id="system-config-link">
                   <i class="fas fa-cog me-2"></i>
                   System Configuration
@@ -1416,6 +1422,20 @@
               </div>
             </div>
 
+            <!-- Attendance Page -->
+            <div id="attendance-page" class="content-page">
+              <div id="attendance-content">
+                <div class="d-flex justify-content-center align-items-center" style="min-height: 200px">
+                  <div class="text-center">
+                    <div class="spinner-border text-primary" role="status">
+                      <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <p class="mt-3">Loading attendance system...</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <!-- System Configuration Page -->
             <div id="system-config-page" class="content-page">
               <div id="system-config-content">
@@ -1697,6 +1717,17 @@
                     >
                       <i class="fas fa-key me-2"></i>
                       Change Password
+                    </a>
+                  </li>
+                  <!-- My Attendance -->
+                  <li class="nav-item">
+                    <a
+                      class="nav-link text-white"
+                      href="#"
+                      id="student-attendance-link"
+                    >
+                      <i class="fas fa-calendar-check me-2"></i>
+                      My Attendance
                     </a>
                   </li>
                   <!-- Placeholder for future features -->
@@ -2068,6 +2099,47 @@
                                     <!-- Will be populated dynamically -->
                                   </tbody>
                                 </table>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Student Attendance Content -->
+                <div
+                  id="student-attendance-content"
+                  class="student-content-page"
+                  style="display: none"
+                >
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div style="margin-left: 50px; margin-right: 20px">
+                        <div class="card shadow mb-4">
+                          <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">
+                              My Attendance
+                            </h6>
+                          </div>
+                          <div class="card-body">
+                            <!-- Course Overview Section -->
+                            <div class="row mb-4">
+                              <div class="col-12">
+                                <h5 class="mb-3">Course Overview</h5>
+                                <div id="student-attendance-overview">
+                                  <!-- Course cards will be populated here -->
+                                </div>
+                              </div>
+                            </div>
+                            
+                            <!-- Detailed Attendance Section -->
+                            <div class="row">
+                              <div class="col-12">
+                                <h5 class="mb-3">Detailed Attendance</h5>
+                                <div id="student-attendance-details">
+                                  <p class="text-muted">Select a course above to view detailed attendance records.</p>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -4365,5 +4437,7 @@
     <script src="js/admin-student-timetable.js"></script>
     <script src="js/system-config.js"></script>
     <script src="js/courses-view.js"></script>
+    <script src="js/student-auth.js"></script>
+    <script src="js/attendance.js"></script>
   </body>
 </html>
